--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mofron-comp-ttlframe",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "title frame component for mofron",
   "main": "index.js",
   "scripts": {
@@ -11,13 +11,14 @@
     "url": "git+https://github.com/simpart/mofron-comp-ttlframe.git"
   },
   "dependencies": {
-     "mofron-comp-txtheader" : ""
+     "mofron-comp-txtheader" : "",
+     "mofron-comp-frame" : ""
   },
   "keywords": [
     "front-end"
   ],
   "author": "simparts",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/simpart/mofron-comp-ttlframe/issues"
   },
